# limo-on-android

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  buildtool.sh  main.cpp  make_program.sh  program.limo  text.c
app/src/main/cpp/fonts/: CMakeLists.txt  Makefile  README.md  dosbox-8x16.c  dosbox-8x16.fnt  fmemopen.c  fonts.h  gen_sources.sh  load.c  myarraystream.c  myarraystream.h  set.c  write.c
app/src/main/cpp/mogl22d/: CMakeLists.txt  mogl22d.c  mogl22d.h
app/src/main/cpp/stub-gc-8.0.6/: CMakeLists.txt.patch  getlib.sh
app/src/main/cpp/stub-gmp/: getlib.sh
app/src/main/cpp/stub-limo/: getlib.sh
app/src/main/res/values/: strings.xml
